--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,11 @@
             <version>5.4.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.12</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
