--- a/web/manage/src/main/resources/application.yml
+++ b/web/manage/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8030
+  port: 8010
   servlet:
     context-path: /manage
     encoding:
@@ -10,5 +10,7 @@ logging:
   file:
     path: log/store
 spring:
+  application:
+    name: manage
   profiles:
     active: develop
