--- a/web/merchant/src/main/resources/application.properties
+++ b/web/merchant/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.url=jdbc:mysql://49.232.165.242:3306/jdbc?serverTimezone=UTC
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.type=com.mysql.cj.jdbc.MysqlConnectionPoolDataSource
+spring.datasource.username=root
+spring.datasource.password=hfi4YL*eLX(?
