--- a/web/platform/src/main/resources/application.properties
+++ b/web/platform/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://49.232.165.242:3306/jdbc?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://49.232.165.242:3306/scm_dev?serverTimezone=UTC
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.type=com.mysql.cj.jdbc.MysqlConnectionPoolDataSource
 spring.datasource.username=root
