--- a/web/merchant/pom.xml
+++ b/web/merchant/pom.xml
@@ -10,9 +10,27 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <groupId>work.onss</groupId>
     <artifactId>merchant</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
-    
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>work.onss.scm.MerchantApplication</mainClass>
+                    <executable>true</executable>
+                    <layout>ZIP</layout>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
