--- a/web/platform/src/main/resources/application.properties
+++ b/web/platform/src/main/resources/application.properties
@@ -1,16 +1,9 @@
-spring.datasource.url=jdbc:mysql://49.232.165.242:3306/scm_dev?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=CST
+spring.datasource.url=jdbc:mysql://82.156.108.104:3306/scm_dev?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.type=com.mysql.cj.jdbc.MysqlDataSource
-spring.datasource.data-username='root'
+spring.datasource.username=root
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
-spring.datasource.data-password=hfi4YL*eLX(?
+spring.datasource.password=root123
 spring.jpa.show-sql=true
 spring.jpa.database=mysql
-rpm -ev mysql-community-server-8.0.23-1.el8.x86_64 --nodeps
-rpm -ev mysql-community-libs-8.0.23-1.el8.x86_64 --nodeps
 
-yum -y install mysql-community-server
-yum module disable mysql
-systemctl start  mysqld.service
-systemctl status  mysqld.service
-systemctl  enable mysqld.service
