--- a/web/platform/src/main/resources/application.properties
+++ b/web/platform/src/main/resources/application.properties
@@ -1,9 +1,10 @@
-spring.datasource.url=jdbc:mysql://82.156.108.104:3306/scm_dev?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT
+spring.datasource.url=jdbc:mysql://82.156.108.104:3306/scmdev?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.type=com.mysql.cj.jdbc.MysqlDataSource
 spring.datasource.username=root
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.datasource.password=root123
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database=mysql
 
