--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -25,5 +25,10 @@
             <version>8.0.23</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>com.vladmihalcea</groupId>
+            <artifactId>hibernate-types-52</artifactId>
+            <version>2.4.3</version>
+        </dependency>
     </dependencies>
 </project>
