--- a/web/platform/src/main/resources/application.properties
+++ b/web/platform/src/main/resources/application.properties
@@ -5,6 +5,6 @@ spring.datasource.username=root
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.datasource.password=root123
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.database=mysql
 
