--- a/web/merchant/src/main/resources/application.properties
+++ b/web/merchant/src/main/resources/application.properties
@@ -1,10 +1,9 @@
-spring.datasource.url=jdbc:mysql://82.156.108.104:3306/scmdev?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
+server.port=8901
+server.servlet.context-path=merchant
+spring.application.name=merchant
+spring.profiles.active=develop
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.type=com.mysql.cj.jdbc.MysqlDataSource
-spring.datasource.username=root
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
-spring.datasource.password=root123
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database=mysql
-
