--- a/web/merchant/src/main/resources/application.properties
+++ b/web/merchant/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8901
-server.servlet.context-path=merchant
+server.servlet.context-path=/merchant
 spring.application.name=merchant
 spring.profiles.active=develop
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
